--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,9 @@
 .navbar {
     display: flex;
     justify-content: space-between;
+    height: 3rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 .navbar-sx {
     display: flex;
@@ -18,6 +21,11 @@
 .navbar-dx {
     display: flex;
     align-content: center;
+    
+}
+.logo {
+    height: 1rem;
+    padding-top: 1rem;
 }
 ul {
     list-style: none;
@@ -26,4 +34,8 @@ ul {
 }
 a {
     text-decoration: none;
+}
+li {
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
