--- a/assets/debug.css
+++ b/assets/debug.css
@@ -5,7 +5,30 @@
     
 }
 .content {
-    border: 1px solid black;
-    background-color: cyan;
+    
+    
 
+}
+.text {
+    border: 1px solid black;
+    width: 130px;
+    height: 80px;
+}
+.img {
+    border: 1px solid black;
+    width: 800px;
+    height: 500px;
+}
+.option {
+    border: 1px solid black;
+    height: 70rem;
+    width: 15rem;
+}
+.option-x {
+    border: 1px solid black;
+    width: 70rem;
+    height: 15rem;
+}
+.options {
+    height: 120rem;
 }
