--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,28 @@
 /*general*/
 
 * {
+    
     margin: 0;
     padding: 0;
 }
 html  {
     max-width: 1400px;
 }
+body {
+    margin-top: 5rem;
+}
 /*header*/
 
 .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
     display: flex;
     justify-content: space-between;
-    height: 3rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    height: 5rem;
+    padding-inline: 1rem;
 }
 .navbar-sx {
     display: flex;
@@ -27,7 +35,7 @@ html  {
 }
 .logo {
     height: 1rem;
-    padding-top: 1rem;
+    padding-top: 2rem;
 }
 ul {
     list-style: none;
@@ -41,13 +49,22 @@ li {
     padding-right: 1rem;
     padding-left: 1rem;
 }
+.start {
+    padding-inline: 0.5rem;
+    background-color: blue;
+    color: white;
+   
+}
+a:hover {
+
+}
 
 /*jumbo*/
 
 .head-section {
-    box-sizing: border-box;
-    background-color: cyan;
-
+    
+    background-color: #B4D0E7;
+    padding-bottom: -4rem;
 }
 .content {
     display: flex;
@@ -60,9 +77,13 @@ li {
     margin-left: 13rem;
     margin-right: 13rem;
 }
-.img {
-    background-image: url("../img/jumbo.png");
-    background-size: cover;
+.jumbo {
+    flex: 0 0 70%;
+    min-width: 0;
+    margin-bottom: -75px;
+}
+.text {
+    flex: 0 0 30%;
 }
 
 /*main*/
@@ -71,5 +92,26 @@ li {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+.c2 {
+    display: flex;
+    flex-direction: row-reverse;
+}
+.img-2 {
+    background-image: url("../img/partner.png");
+    background-size: cover;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    height: 60px;
+    width: 30px;
+}
+.cards {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
