--- a/assets/style.css
+++ b/assets/style.css
@@ -87,14 +87,56 @@ a:hover {
 }
 
 /*main*/
-
+main .content {
+    display: flex;
+    flex-direction: column;
+}
 .options {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
-    margin-top: 2rem;
+    margin-top: 6rem;
+    
 }
+.sub-title {
+    margin-top: 7rem;
+}
+.title-2 {
+    text-align: left;
+    font-size: 2rem;
+    padding-bottom: 2rem;
+}
+.sub-title p {
+    display: inline;
+    padding-right: 1rem;
+    
+}
+.option {
+    border: 1px solid black;
+    height: 956px;
+    width: 250px;
+    position: relative;
+}
+.option-x {
+    border: 1px solid black;
+    width: 820px;
+    height: 250px;
+    position: relative;
+}
+.option-title {
+    position: absolute;
+    top: 0;
+    border: 1px solid black;
+    text-align: center;
+    width: 250px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+.option-x .option-title {
+    width: 820px;
+}
+
 .c2 {
     display: flex;
     flex-direction: row-reverse;
