--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ main .content {
 .option-x {
     border: 1px solid black;
     width: 820px;
-    height: 250px;
+    height: 200px;
     position: relative;
 }
 .option-title {
@@ -174,6 +174,16 @@ main .content {
 .info hr {
     color: gray;
     width: 20%;
+}
+.option-x .info {
+    display: flex;
+    justify-content: space-between;
+}
+.info-2 {
+    padding-top: ,5rem;
+}
+.info-3 {
+    padding-top: 1rem;
 }
 /*section-2*/
 
