--- a/assets/style.css
+++ b/assets/style.css
@@ -185,25 +185,18 @@ main .content {
 .info-3 {
     padding-top: 1rem;
 }
+
 /*section-2*/
 
 .c2 {
     display: flex;
     flex-direction: row-reverse;
+    margin-left: 15rem;
+    margin-right: 15rem;
+    margin-top: 8rem;
 }
-.img-2 {
-    background-image: url("../img/partner.png");
-    background-size: cover;
+.partner {
+    flex: 0 0 70%;
+    min-width: 0;
 }
-.card {
-    display: flex;
-    flex-direction: column;
-    height: 60px;
-    width: 30px;
-}
-.cards {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+
