--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ main .content {
     justify-content: space-between;
 }
 .info-2 {
-    padding-top: ,5rem;
+    padding-top: .5rem;
 }
 .info-3 {
     padding-top: 1rem;
@@ -198,5 +198,35 @@ main .content {
 .partner {
     flex: 0 0 70%;
     min-width: 0;
+}
+
+/*section-3*/
+
+.title-3 {
+    text-align: left;
+    font-size: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+}
+.s3 {
+    margin-left: 15rem;
+    margin-right: 15rem;
+}
+.row {
+    display: flex;
+    gap: 2rem;
+    padding-bottom: 2rem;
+}
+.container {
+    
+    height: 450px;
+    width: 250px;
+}
+.card {
+    flex: 0 0 30%;
+    width: 100%;
+}
+.container .text h3 {
+    padding-bottom: 2rem;
 }
 
