--- a/assets/style.css
+++ b/assets/style.css
@@ -247,9 +247,24 @@ main .content {
 /*square*/
 
 .square {
-    width: 1920px;
-    height: 636px;
+    width: 100%;
+    height: 323px;
     background-color: antiquewhite;
+    display: flex;
+}
+.square-sx {
+    width: calc(100% / 3);
+    height: 323px;
+    border: 1px dashed black;
+}
+.square-cnt {
+    width: calc(100% / 3);
+    height: 323px;
+}
+.square-dx {
+    width: calc(100% / 3);
+    height: 323px;
+    background-color: red;
 }
 
 /*section-6*/
