--- a/assets/style.css
+++ b/assets/style.css
@@ -248,25 +248,58 @@ main .content {
 
 .square {
     width: 100%;
-    height: 323px;
+    height: 400px;
     background-color: antiquewhite;
     display: flex;
 }
 .square-sx {
     width: calc(100% / 3);
-    height: 323px;
-    border: 1px dashed black;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 .square-cnt {
     width: calc(100% / 3);
-    height: 323px;
+    height: 100%;
+    background-color: #FFFFFF;
 }
 .square-dx {
     width: calc(100% / 3);
-    height: 323px;
-    background-color: red;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
-
+.sub-square {
+    width: calc(100% / 2);
+    height: calc(100% / 2);
+    
+}
+.sq1 {
+    background-color: #A2D39B;
+}
+.sq2 {
+    background-color: #61082B;
+}
+.sq3 {
+    background-color: #0093CE;
+}
+.sq4 {
+    background-color: #FF1C1C;
+}
+.sq5 {
+    background-color: #D5001F;
+}
+.sq6 {
+    background-color: #B4D0E7;
+}
+.sq7 {
+    background-color: #0D2481;
+}
+.sq8 {
+    background-color: #FFD830;
+}
 /*section-6*/
 
 .s-6 {
