--- a/assets/style.css
+++ b/assets/style.css
@@ -51,9 +51,11 @@ li {
 }
 .start {
     padding-inline: 0.5rem;
-    background-color: blue;
+    background-color: #448BFF;
     color: white;
-   
+    height: 2rem;
+    margin-top: 1.5rem;
+    border: 0;
 }
 a:hover {
 
