--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@ body {
 .navbar a {
     text-decoration: none;
 }
+
 li {
     padding-right: 1rem;
     padding-left: 1rem;
@@ -57,8 +58,9 @@ li {
     margin-top: 1.5rem;
     border: 0;
 }
-a:hover {
 
+button:hover {
+    cursor: pointer;
 }
 
 /*jumbo*/
@@ -72,6 +74,7 @@ a:hover {
     display: flex;
     margin-left: 15rem;
     margin-right: 15rem;
+    margin-top: 2rem;
 }
 .title {
     text-align: center;
@@ -87,8 +90,27 @@ a:hover {
 .text {
     flex: 0 0 30%;
 }
+.head-section .content .text button {
+    background-color: #448BFF;
+    border: 0;
+    color: white;
+    padding-inline: 1rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.head-section .content .text p {
+    font-size: .9rem;
+}
+.head-section .content .text a i {
+    color: black;
+    margin-top: 3rem;
+    font-size: 2rem;
+}
 
                    /*main*/
+            
 
 /*section-1*/
 
@@ -258,7 +280,7 @@ main .content {
 
 /*square*/
 
-.square {
+#square {
     width: 100%;
     height: 400px;
     display: flex;
