--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,6 @@
                     /*general*/
 
 * {
-    
     margin: 0;
     padding: 0;
 }
@@ -13,6 +12,7 @@ body {
 }
 button:hover {
     cursor: pointer;
+    color: red;
 }
                      /*header*/
 
@@ -34,7 +34,6 @@ button:hover {
 .navbar-dx {
     display: flex;
     align-content: center;
-    
 }
 .logo {
     height: 1rem;
@@ -61,7 +60,9 @@ li {
     margin-top: 1.5rem;
     border: 0;
 }
-
+a:hover {
+    color: red;
+}
 
 
 /*jumbo*/
